--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,9 @@ spring.messages.basename=i18n/messages
 # % protected region % [Add any additional properties here] end
 aws.userPoolId=eu-west-1_pZkbmWFUL
 aws.region=eu-west-1
+
+#Holidays List URL :
+holidays.url.baseURL = ${HOLIDAYS_URL:https://calendrier.api.gouv.fr/jours-feries}
+holidays.url.zone = ${HOLIDAYS_ZONE:metropole}
+holidays.url.year = ${HOLIDAYS_YEAR}
+holidays.url.extension = ${HOLIDAYS_EXTENSION:.json}
