--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,9 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 # % protected region % [Add any additional properties here] on begin
 spring.messages.basename=i18n/messages
 # % protected region % [Add any additional properties here] end
-aws.userPoolId=eu-west-1_pZkbmWFUL
-aws.region=eu-west-1
+aws.userPoolId=${COGNITO_POOL_ID:eu-west-1_pZkbmWFUL}
+aws.region=${COGNITO_REGION:eu-west-1}
+
 
 #Holidays List URL :
 holidays.url.baseURL = ${HOLIDAYS_URL:https://calendrier.api.gouv.fr/jours-feries}
