feature: add notification to microservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ holidays.url.baseURL = ${HOLIDAYS_URL:https://calendrier.api.gouv.fr/jours-ferie
 holidays.url.zone = ${HOLIDAYS_ZONE:metropole}
 holidays.url.year = ${HOLIDAYS_YEAR}
 holidays.url.extension = ${HOLIDAYS_EXTENSION:.json}
+
+#Notification Micro-service URL :
+manageme.notifications.leaveRequestsUrl = ${NOTIFICATIONS_LEAVE_REQUESTS_API:http://localhost:8086/api/notifications/leave-requests}
+#Relancer CRON
+manageme.notifications.schedule = ${NOTIFICATIONS_SCHEDULE:0 0 3 * * *}
