--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.groupehillstone</groupId>
     <artifactId>manage-me-leaves</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <name>manage-me-leaves</name>
     <description>manage-me-leaves</description>
@@ -37,7 +37,7 @@
         <connection>scm:git:https://gitlab.groupehillstone.com/manage-me/manage-me-leaves.git</connection>
         <developerConnection>scm:git:https://gitlab.groupehillstone.com/manage-me/manage-me-leaves.git</developerConnection>
         <url>https://gitlab.groupehillstone.com/manage-me/manage-me-leaves</url>
-        <tag>HEAD</tag>
+        <tag>manage-me-leaves-1.2.0</tag>
     </scm>
 
     <properties>
